@@ -1,5 +1,7 @@
 === master
 
+* Add methods for user-visible strings in help output and error messages, so they can be overridden by plugins (jeremyevans)
+
 * Move run_is method to run_is plugin (jeremyevans)
 
 * Move is method to is plugin (jeremyevans)
